fix button copy, add to button-code-wrap

--- a/src/components/pages/components/button-block/button-block.scss
+++ b/src/components/pages/components/button-block/button-block.scss
@@ -4,11 +4,20 @@
   display: flex;
   align-items: center;
 
+  @include max-width(768) {
+    flex-direction: column;
+  }
+
   &__left {
     margin: 0 20px 0 0;
     width: calc(100% / 3);
     display: flex;
     justify-content: center;
+
+    @include max-width(768) {
+      width: 100%;
+      margin: 10px 0 30px 0;
+    }
   }
 
   &__left-button {
@@ -22,6 +31,10 @@
     width: calc(100% * 2 / 3);
     display: flex;
     flex-direction: column;
+
+    @include max-width(768) {
+      width: 100%;
+    }
   }
 
   &__right-children,
