--- a/src/components/pages/components/button-code/button-code.scss
+++ b/src/components/pages/components/button-code/button-code.scss
@@ -1,7 +1,1 @@
-.ButtonCode {
-  &__copy {
-    margin: 5px 0 0 0;
-    display: flex;
-    justify-content: flex-end;
-  }
-}
+// .ButtonCode {}
