--- a/src/components/staff/staff-button-copy/staff-button-copy.scss
+++ b/src/components/staff/staff-button-copy/staff-button-copy.scss
@@ -1,3 +1,9 @@
 .StaffButtonCopy {
-  padding: 5px 20px 5px 20px;
+  width: 70px;
+  padding: 5px 10px 5px 10px;
+  border-radius: 2px;
+
+  &:focus {
+    outline: none !important;
+  }
 }
